--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Battambang:wght@100;300;400;700;900&family=Bokor&family=Caveat:wght@400..700&family=Moul&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Wet+Paint&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Open Sans", serif;
 }
 body {
   background-color: black;
@@ -21,7 +24,7 @@ body {
   z-index: 99;
   width: 100%;
   height: 70px;
-  background-color: rgba(71, 200, 225, 0.349);
+  background-color: rgba(13, 103, 121, 0.349);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,14 +46,14 @@ a {
   font-size: 18px;
   color: white;
   text-decoration: none;
-  padding: 5px 20px;
+  padding: 2px 10px;
   position: relative;
   width: 0;
   height: 3px;
   font-weight: bold;
 }
 .content ul li a:hover {
-  color:yellow;
+  color: yellow;
   font-weight: bold;
   transition: all 300ms ease-in-out;
 }
@@ -58,18 +61,18 @@ a {
   content: "";
   width: 0;
   height: 3px;
-  background-color:#d4143a;
+  background-color: #d4143a;
   transition: all 500ms ease-in-out;
   position: absolute;
-  bottom: -6px;
+  bottom: -4px;
 }
 .content ul li a:hover::before {
   content: "";
   width: 50%;
   height: 3px;
   position: absolute;
-  bottom: -6px;
-  background-color:#d4143a;
+  bottom: -px;
+  background-color: #d4143a;
   transition: all 500ms ease-in-out;
 }
 
@@ -98,11 +101,25 @@ a {
 .text h1 {
   font-size: 60px;
   font-weight: bold;
+
+  animation: typing 3s steps(22) forwards;
 }
+
+
 .text button {
   color: white;
-  background-color: #d4143a;
+
   background: transparent;
+  padding: 10px 20px;
+  border: 2px solid #d4143a;
+  font-size: 20px;
+  border-radius: 10px;
+}
+.text button:hover {
+  color: white;
+  box-shadow: 0 0 10px #d4143a, 0 0 30px #d4143a, 0 0 50px #d4143a;
+  transition: 500ms ease-in-out;
+  transform: translateY(-10px);
   padding: 10px 20px;
   border: 2px solid #d4143a;
   font-size: 20px;
@@ -165,7 +182,6 @@ a {
   position: absolute;
   bottom: -6px;
   background-color: #d4143a;
-
 }
 .p {
   margin: 20px;
@@ -195,6 +211,7 @@ a {
   text-align: center;
   text-transform: uppercase;
 }
+
 .container {
   padding: 0 130px;
   color: white;
@@ -207,6 +224,7 @@ a {
 span {
   color: #d4143a;
 }
+/* .service */
 .service .container .card {
   width: 480px;
   height: 450px;
@@ -218,11 +236,10 @@ span {
   width: 480px;
   height: 450px;
   background-color: #d4143a;
-  transition: 200ms ease-in-out;
   border-radius: 10px;
   padding: 30px 20px;
-  transform: translateY(-15px);
-  transition: 500ms ease-in-out;
+  transform: translateY(-18px);
+  transition: 300ms ease-in-out;
 }
 .service i {
   font-size: 60px;
@@ -239,6 +256,7 @@ span {
 .service .container .card1 {
   width: 480px;
   height: 450px;
+  border-radius: 15px;
   position: relative;
   background-color: rgb(74, 72, 72);
 }
@@ -248,6 +266,7 @@ span {
   height: 100%;
   object-fit: cover;
   transition: 200ms ease-in-out;
+  border-radius: 15px;
 }
 .card1 .content {
   position: absolute;
@@ -255,11 +274,12 @@ span {
   left: 0;
   width: 100%;
   height: 0;
+  border-radius: 15px;
   background: rgb(131, 58, 180);
   background: linear-gradient(
-    162deg,
+    180deg,
     rgba(131, 58, 180, 1) 0%,
-    rgba(253, 29, 29, 0.9809173669467787) 78%,
+    rgba(253, 29, 29, 0.9809173669467787) 61%,
     rgba(252, 176, 69, 1) 100%
   );
   display: flex;
@@ -276,6 +296,7 @@ span {
   left: 0;
   width: 100%;
   height: 100%;
+  border-radius: 15px;
   background: rgb(131, 58, 180);
   background: linear-gradient(
     162deg,
@@ -428,7 +449,6 @@ form button:hover {
 }
 
 @media (max-width: 768px) {
-
   .name a {
     font-size: 20px;
     margin-left: 10px;
