--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Open Sans", serif;
+  /* font-family: "Open Sans", serif; */
 }
 body {
   background-color: black;
@@ -86,7 +86,7 @@ a {
   position: relative;
 }
 .layer {
-  background-color: rgba(5, 3, 3, 0.475);
+  background-color: rgba(0, 0, 0, 0.575);
   width: 100%;
   height: 100%;
 }
@@ -239,7 +239,6 @@ span {
   border-radius: 10px;
   padding: 30px 20px;
   transform: translateY(-18px);
-  transition: 300ms ease-in-out;
 }
 .service i {
   font-size: 60px;
